// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichEditor should render component 1`] = `
<div>
  <div
    data-analyticsid="rek-test"
    data-testid="rek-test"
    id="rek-test"
  >
    <span />
    <div />
  </div>
</div>
`;

exports[`RichEditor should render error as one child 1`] = `
<div>
  <div
    data-analyticsid="rek-test"
    data-testid="rek-test"
    id="rek-test"
  >
    <span />
    <div />
    <span
      class="MuiTypography-root MuiTypography-caption css-1xktwm9-MuiTypography-root"
      style="display: inline-block;"
    >
      This field is required
      <span>
         - 
      </span>
    </span>
    <span
      class="MuiTypography-root MuiTypography-caption css-1xktwm9-MuiTypography-root"
      style="display: inline-block;"
    >
      18
       characters of 
      10
      test instructions
    </span>
  </div>
</div>
`;

exports[`RichEditor should render error as react children 1`] = `
<div>
  <div
    data-analyticsid="rek-test"
    data-testid="rek-test"
    id="rek-test"
  >
    <span />
    <div />
    <span
      class="MuiTypography-root MuiTypography-caption css-1xktwm9-MuiTypography-root"
      style="display: inline-block;"
    >
      <span>
        This field is required
      </span>
      <span>
         - 
      </span>
    </span>
    <span
      class="MuiTypography-root MuiTypography-caption css-1xktwm9-MuiTypography-root"
      style="display: inline-block;"
    >
      18
       characters of 
      10
      test instructions
    </span>
  </div>
</div>
`;

exports[`RichEditor should render error showing input length 1`] = `
<div>
  <div
    data-analyticsid="rek-test"
    data-testid="rek-test"
    id="rek-test"
  >
    <span />
    <div />
    <span
      class="MuiTypography-root MuiTypography-caption css-1xktwm9-MuiTypography-root"
      style="display: inline-block;"
    >
      This field is required
      <span>
         - 
      </span>
    </span>
    <span
      class="MuiTypography-root MuiTypography-caption css-1xktwm9-MuiTypography-root"
      style="display: inline-block;"
    >
      18
       characters of 
      10
      test instructions
    </span>
  </div>
</div>
`;

exports[`RichEditor should render error showing maxValue and instructions 1`] = `
<div>
  <div
    data-analyticsid="rek-test"
    data-testid="rek-test"
    id="rek-test"
  >
    <span />
    <div />
    <span
      class="MuiTypography-root MuiTypography-caption css-1xktwm9-MuiTypography-root"
      style="display: inline-block;"
    >
      This field is required
      <span>
         - 
      </span>
    </span>
    <span
      class="MuiTypography-root MuiTypography-caption css-1xktwm9-MuiTypography-root"
      style="display: inline-block;"
    >
      0
       characters of 
      10
      test instructions
    </span>
  </div>
</div>
`;

exports[`RichEditor should render given title and description 1`] = `
<div>
  <div
    data-analyticsid="rek-test"
    data-testid="rek-test"
    id="rek-test"
  >
    <span>
      <p
        class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
      >
        This is test title
      </p>
      <span
        class="MuiTypography-root MuiTypography-caption css-1e4ju4k-MuiTypography-root"
      >
        This is test description
      </span>
    </span>
    <div />
  </div>
</div>
`;

exports[`RichEditor should render given title and description with error 1`] = `
<div>
  <div
    data-analyticsid="rek-test"
    data-testid="rek-test"
    id="rek-test"
  >
    <span>
      <p
        class="MuiTypography-root MuiTypography-body1 css-v0lc22-MuiTypography-root"
      >
        This is title with error
        <span>
           *
        </span>
      </p>
      <span
        class="MuiTypography-root MuiTypography-caption css-1xktwm9-MuiTypography-root"
      >
        This is description with error
      </span>
    </span>
    <div />
    <span
      class="MuiTypography-root MuiTypography-caption css-1xktwm9-MuiTypography-root"
      style="display: inline-block;"
    >
      This field is required
    </span>
  </div>
</div>
`;

exports[`RichEditor should render maxValue with missing instructions 1`] = `
<div>
  <div
    data-analyticsid="rek-test"
    data-testid="rek-test"
    id="rek-test"
  >
    <span />
    <div />
    <span
      class="MuiTypography-root MuiTypography-caption css-1e4ju4k-MuiTypography-root"
      style="display: inline-block;"
    >
      0
       characters of 
      10
    </span>
  </div>
</div>
`;

exports[`RichEditor should render plain text value 1`] = `
<div>
  <div
    data-analyticsid="rek-test"
    data-testid="rek-test"
    id="rek-test"
  >
    <span />
    <div />
  </div>
</div>
`;
